showing picture and two nav links

--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
-<nav><class="bio.html"</nav>
-<h1>Navigation test Roar</h1> 
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>All of the Dinosaurs in every Jurassic Park Movie</title>
+    </head>
+
+    <body>
+        <nav>
+            <ol>
+                <li><a href="./bio.html">Roar</a></li>
+                <li><a href="./passions.html">dino snacks</a></li>
+            </ol>
+        </nav>
+    </body>
+</html>
 
