Added a link to all cloned dinos in the film series and made a list of first movie dinos in passions.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <nav>
             <ol>
                 <li><a href="./bio.html">Roar</a></li>
-                <li><a href="./passions.html">dino snacks</a></li>
+                <li><a href="./passions.html">Dino Snacks</a></li>
             </ol>
         </nav>
     </body>
