added a navigation back to the homepage

--- a/passions.html
+++ b/passions.html
@@ -18,5 +18,8 @@
             <li>Tyrannosaurus</li>
             <li>Velociraptor</li>
         </ol>
+        <nav>
+            <a href="/index.html">Back to Home Page</a>
+        </nav>
     </body>
 </html>
