--- a/passions.html
+++ b/passions.html
@@ -19,7 +19,7 @@
             <li>Velociraptor</li>
         </ol>
         <nav>
-            <a href="/index.html">Back to Home Page</a>
+            <a href="./index.html">Back to Home Page</a>
         </nav>
     </body>
 </html>
