--- a/passions.html
+++ b/passions.html
@@ -9,15 +9,17 @@
             <a href="https://en.wikipedia.org/wiki/List_of_cloned_animals_in_the_Jurassic_Park_series">List of all cloned Dinosaurs in the Series</a>
         </nav>
         <h2>Jurassic Park</h2>
-        <ol>
-            <li>Brachiosaurus</li>
+        <nav>
+        <ul>
+            <li>Brachiosaurus</li><img src="./Brachiosaurus Movie.png" width="400" height="200"/>
             <li>Dilophosaurus</li>
             <li>Gallimimus</li>
             <li>Parasaurolophus</li>
             <li>Triceratops</li>
             <li>Tyrannosaurus</li>
             <li>Velociraptor</li>
-        </ol>
+        </ul>
+        </nav>
         <nav>
             <a href="./index.html">Back to Home Page</a>
         </nav>
