Change the dinosaur names to heading 3 instead of a list element

--- a/passions.html
+++ b/passions.html
@@ -10,15 +10,15 @@
         </nav>
         <h2>Jurassic Park</h2>
         <nav>
-        <ul>
-            <li>Brachiosaurus</li><img src="./Brachiosaurus Movie.png" width="400" height="200"/>
-            <li>Dilophosaurus</li>
-            <li>Gallimimus</li>
-            <li>Parasaurolophus</li>
-            <li>Triceratops</li>
-            <li>Tyrannosaurus</li>
-            <li>Velociraptor</li>
-        </ul>
+        
+        <h3>Brachiosaurus</h3><img src="./Brachiosaurus Movie.png" width="400" height="250"/>
+        <h3>Dilophosaurus</h3></li><img src="./Dilophosaurus Jurassic Park.jpg" width="400" height="250"/>
+        <h3>Gallimimus</h3><img src="./gallimimus Jurassic Park.webp" width="400" height= "250"/>
+        <h3>Parasaurolophus</h3><img src="./Parasaurolophus movie.jpg" width="400" height="250"/>
+        <h3>Triceratops</h3><img src="./triceratops-jurassic-park.webp" width="400" height="250"/>
+        <h3>Tyrannosaurus</h3><img src="./T-rex picture.jpg" width="400" height="250"/>
+        <h3>Velociraptor</h3><img src="./Velociraptor.jpg" width="400" height="250"/>
+        
         </nav>
         <nav>
             <a href="./index.html">Back to Home Page</a>
