add alt element to passions.html photos

--- a/passions.html
+++ b/passions.html
@@ -11,13 +11,13 @@
         <h2>Jurassic Park</h2>
         <nav>
         
-        <h3>Brachiosaurus</h3><img src="./Brachiosaurus Movie.png" width="400" height="250"/>
-        <h3>Dilophosaurus</h3></li><img src="./Dilophosaurus Jurassic Park.jpg" width="400" height="250"/>
-        <h3>Gallimimus</h3><img src="./gallimimus Jurassic Park.webp" width="400" height= "250"/>
-        <h3>Parasaurolophus</h3><img src="./Parasaurolophus movie.jpg" width="400" height="250"/>
-        <h3>Triceratops</h3><img src="./triceratops-jurassic-park.webp" width="400" height="250"/>
-        <h3>Tyrannosaurus</h3><img src="./T-rex picture.jpg" width="400" height="250"/>
-        <h3>Velociraptor</h3><img src="./Velociraptor.jpg" width="400" height="250"/>
+        <h3>Brachiosaurus</h3><img src="./Brachiosaurus Movie.png" alt="brachiosaurus picture" width="400" height="250"/>
+        <h3>Dilophosaurus</h3></li><img src="./Dilophosaurus Jurassic Park.jpg" alt="dilophosaurus picture" width="400" height="250"/>
+        <h3>Gallimimus</h3><img src="./gallimimus Jurassic Park.webp" alt="gallimimus picture" width="400" height= "250"/>
+        <h3>Parasaurolophus</h3><img src="./Parasaurolophus movie.jpg" alt="parasaurolophus picture" width="400" height="250"/>
+        <h3>Triceratops</h3><img src="./triceratops-jurassic-park.webp" alt="triceratops picture" width="400" height="250"/>
+        <h3>Tyrannosaurus</h3><img src="./T-rex picture.jpg" alt="tyranasaurus picture" width="400" height="250"/>
+        <h3>Velociraptor</h3><img src="./Velociraptor.jpg" alt="velociraptor" width="400" height="250"/>
         
         </nav>
         <nav>
