added links to all 3 pages. now passions.html and bio.html is connected

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>All of the Dinosaurs in every Jurassic Park Movie</title>
+        <title>Dinosaurs in JP</title>
     </head>
 
     <body>
+        <h1>Yay Dinosaurs!!!</h1>
+
         <nav>
             <ol>
                 <li><a href="./bio.html">Roar</a></li>
