--- a/passions.html
+++ b/passions.html
@@ -21,6 +21,7 @@
         
         </nav>
         <nav>
+            <a href="./bio.html">Dinosaur Information</a>
             <a href="./index.html">Back to Home Page</a>
         </nav>
     </body>
